--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,4 +14,4 @@ jobs:
       with:
         java-version: 17
     - name: Build with Gradle
-      run: ./gradlew clean test
+      run: ./gradlew build
